# ortho-graph

./: .gitignore  README.md  Todo.txt  asciio_snapshot  definitions  graph_before_after  graph_snapshot_to_asciio_web  implementation  json_to_asciio_script  requirements  requirements.md  setup.cfg
examples/: build_system.asciio  build_system.yaml  example  example.yaml  simple_graph  simple_graph.asciio  simple_graph.txt  simple_graph.yaml  two_graphs  two_groups.yaml
scripts/: json_to_asciio_graph  visualise
src/ortho-graph/: main.py
src/ortho_graph/: asciio.py  constants.py  graph.py  main.py  utils.py
src/ortho_graph/algorithm/: annealing.py
tests/: AB_BA_BA_AA  AB_BA_BA_AA_AA  AB_BC_BD_CD  list_transformation.py  list_transformation_graph_description_1  list_transformation_graph_description_2  list_transformation_invalid_graph_description  todo  unit_array.py
