[metadata]
name = package_name
version = 0.0.1
license = GPL3
description = test
long_description = file: README.md
author = Thomas Astley
author_email = 
classifiers=
   template
   python

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =

[options.packages.find]
where=src
